crates/tsuno-driver/tests/fixtures/verify_cli/fail/rejects_unsupported_initial_state.rs
//@ verify
fn rejects_unsupported_initial_state(x: &mut (i32, bool)) {
    //@ assert "true"
}

fn main() {}
